# QuantumLeap

./: .gitignore  Cargo.toml  README.md  test_network_transfer.sh
apps/cli/: Cargo.toml
apps/cli/src/: license.rs  main.rs
benches/: transfer_benchmark.rs
crates/qltp-auth/: Cargo.toml
crates/qltp-auth/src/: error.rs  lib.rs
crates/qltp-auth/src/adapters/: memory_store.rs  mod.rs
crates/qltp-auth/src/application/: auth_service.rs  mod.rs
crates/qltp-auth/src/domain/: credentials.rs  mod.rs  rate_limit.rs  session.rs  token.rs
crates/qltp-auth/src/ports/: mod.rs  session_store.rs
crates/qltp-compression/: Cargo.toml
crates/qltp-compression/src/: lib.rs
crates/qltp-core/: Cargo.toml
crates/qltp-core/src/: adaptive.rs  chunking.rs  compression.rs  error.rs  hash.rs  lib.rs  pipeline.rs  prefetch.rs  types.rs
crates/qltp-licensing/: Cargo.toml
crates/qltp-licensing/benches/: sqlite_benchmarks.rs
crates/qltp-licensing/docs/: PERFORMANCE.md
crates/qltp-licensing/src/: error.rs  lib.rs
crates/qltp-licensing/src/adapters/: memory_license_store.rs  memory_usage_store.rs  mod.rs  sqlite_license_store.rs  sqlite_usage_store.rs
crates/qltp-licensing/src/application/: license_service.rs  mod.rs  usage_tracker.rs
crates/qltp-licensing/src/domain/: mod.rs
crates/qltp-licensing/src/domain/license/: device.rs  feature_flags.rs  license.rs  license_key.rs  license_tier.rs  mod.rs  signing.rs
crates/qltp-licensing/src/domain/usage/: mod.rs  quota.rs  usage_record.rs
crates/qltp-licensing/src/integration/: anonymous.rs  manager.rs  mod.rs  session.rs  user.rs
crates/qltp-licensing/src/middleware/: mod.rs  transfer_validator.rs
crates/qltp-licensing/src/ports/: license_repository.rs  mod.rs  usage_repository.rs
crates/qltp-licensing/tests/: integration_tests.rs
crates/qltp-relay/: Cargo.toml
crates/qltp-relay/examples/: relay_server.rs
crates/qltp-relay/src/: error.rs  lib.rs
crates/qltp-relay/src/adapters/: handlers.rs  mod.rs  protocol.rs
crates/qltp-relay/src/application/: connection_service.rs  mod.rs  peer_service.rs  session_service.rs
crates/qltp-relay/src/domain/: connection.rs  ice_candidate.rs  mod.rs  nat_type.rs  peer.rs  peer_capabilities.rs  peer_id.rs  session.rs  session_id.rs
crates/qltp-relay/src/infrastructure/: auth.rs  cascade.rs  config.rs  events.rs  metrics.rs  mod.rs  rate_limit.rs  relay_service.rs  storage.rs  websocket.rs
crates/qltp-relay/src/ports/: events.rs  mod.rs  repositories.rs
crates/qltp-relay/src/stun/: attributes.rs  codec.rs  message.rs  mod.rs  server.rs
crates/qltp-relay/src/turn/: allocation.rs  attributes.rs  mod.rs  server.rs
crates/qltp-storage/: Cargo.toml
crates/qltp-storage/src/: lib.rs
crates/qltp-transport/: Cargo.toml
crates/qltp-transport/src/: error.rs  lib.rs
crates/qltp-transport/src/adapters/: io_uring.rs  mod.rs  quic.rs  tcp.rs
crates/qltp-transport/src/application/: backend_factory.rs  backend_monitor.rs  backend_selector.rs  fallback_manager.rs  mod.rs  transfer_client.rs  transfer_server.rs  transport_manager.rs
crates/qltp-transport/src/domain/: backend_capabilities.rs  connection.rs  mod.rs  session.rs  session_state.rs  transport_stats.rs  transport_type.rs
crates/qltp-transport/src/features/: adaptive_tuning.rs  fec.rs  mod.rs  parallel.rs  parallel_streams.rs  resume.rs  tls.rs
crates/qltp-transport/src/infrastructure/: buffer_pool.rs  mod.rs  storage_io.rs
crates/qltp-transport/src/ports/: mod.rs  transport_backend.rs
crates/qltp-transport/src/protocol/: codec.rs  messages.rs  mod.rs  types.rs
crates/qltp-transport/tests/: backend_switching_tests.rs  fallback_tests.rs  integration_tests.rs  load_tests.rs  performance_tests.rs
docs/: AUTH_LICENSING_INTEGRATION_PLAN.md  AUTH_REFACTORING_COMPLETE.md  BENCHMARKS.md  BUGS_AND_ISSUES.md  BUSINESS_PLAN.md  CLOUD_RELAY_SERVICE.md  DDD_HEXAGONAL_ARCHITECTURE.md  DDD_HEXAGONAL_REFACTORING.md  DEPLOYMENT_STRATEGY.md  ENTERPRISE_ARCHITECTURE.md  ERROR_RECOVERY.md  FILE_SHARING_SERVICE_RESEARCH.md  FILE_TRANSFER_SPEED_OPTIMIZATION_STUDY.md  GETTING_STARTED.md  LICENSING_AND_ACCESS_CONTROL.md  LICENSING_SYSTEM.md  NETWORK_PROTOCOL.md  PACKET_LOSS_MITIGATION.md  PERFORMANCE_ENHANCEMENT_PLAN.md  PRODUCT_EXPANSION_STRATEGY.md  PROJECT_STATUS.md  QLTP_NETWORK_ARCHIVE.md  QLTP_NETWORK_DEPRECATION.md  QUICK_START.md  QUIC_IMPLEMENTATION_STATUS.md  RESUME_CAPABILITY.md  SYSTEM_ARCHITECTURE.md  TLS_ENCRYPTION.md  TRANSPORT_INTEGRATION_PLAN.md  USER_AUTHENTICATION_SYSTEM.md
