[workspace]
resolver = "2"
members = [
    "crates/qltp-core",
    "crates/qltp-compression",
    "crates/qltp-storage",
    "crates/qltp-auth",
    "crates/qltp-licensing",
    "crates/qltp-transport",
    "crates/qltp-relay",
    "apps/cli",
]
# Note: qltp-network has been deprecated and merged into qltp-transport
# Note: qltp-signaling and qltp-connection have been refactored into qltp-relay with DDD+Hexagonal architecture

[package]
name = "qltp-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "transfer_benchmark"
harness = false

[dependencies]
qltp-core = { path = "crates/qltp-core" }
qltp-compression = { path = "crates/qltp-compression" }
qltp-storage = { path = "crates/qltp-storage" }
qltp-transport = { path = "crates/qltp-transport" }
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"
sha2 = "0.10"
blake3 = "1.5"
tokio = { version = "1.35", features = ["full"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QLTP Team <hello@qltp.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qltp/qltp"
homepage = "https://qltp.io"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression
lz4 = "1.24"
zstd = "0.13"

# Hashing
sha2 = "0.10"
blake3 = "1.5"

# Networking
quinn = "0.10"  # QUIC implementation
rustls = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
