[package]
name = "qltp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for QLTP file transfer"

[[bin]]
name = "qltp"
path = "src/main.rs"

[dependencies]
qltp-core = { path = "../../crates/qltp-core" }
qltp-transport = { path = "../../crates/qltp-transport" }
qltp-licensing = { path = "../../crates/qltp-licensing" }
qltp-auth = { path = "../../crates/qltp-auth" }

tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
num_cpus = "1.16"
chrono = "0.4"
hostname = "0.3"

[dev-dependencies]
tempfile = "3.8"