[package]
name = "qltp-auth"
version = "0.1.0"
edition = "2021"
authors = ["QLTP Team"]
description = "Authentication and session management for QLTP"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
# Password hashing (Argon2id - OWASP recommended)
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc"] }
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async support (optional, for future async auth)
tokio = { version = "1.35", features = ["sync"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
async = ["tokio"]