[package]
name = "qltp-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
# tokio-uring = "0.5"  # Only needed for TURN zero-copy on Linux

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "6.1"
bytes = "1.7"
chrono = "0.4"

# Networking
crc = "3.2"
rand = "0.8"

# Cryptography (for authentication)
hmac = "0.12"
sha1 = "0.10"
md5 = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
