[package]
name = "qltp-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Content-addressable storage layer for QLTP"

[dependencies]
tokio = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"