[package]
name = "qltp-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Protocol codec
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }
crc32fast = "1.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Networking
socket2 = "0.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for session IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography
sha2 = "0.10"

# System info
num_cpus = "1.16"

# Random number generation (for jitter)
rand = "0.8"

# Optional features
io-uring = { version = "0.6", optional = true }
libc = "0.2"
# QUIC implementation using Cloudflare's quiche (simpler API than Quinn)
quiche = { version = "0.20", optional = true }
ring = { version = "0.17", optional = true }  # For crypto
# TLS support (used by TLS feature module)
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
webpki-roots = "0.26"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
rcgen = "0.12"

[features]
default = ["quic"]
quic = ["quiche", "ring"]
io_uring = ["dep:io-uring"]
dpdk = []  # DPDK support (requires external setup)